# crontopus

./: .gitignore  GEMINI.md  PHASE_17_DEPLOYMENT.md  README.md  WARP.md  docker-compose.yml  test_forgejo_api.py
.do/: README.md
.github/workflows/: agent-release.yml  backend-ci.yml  ci.yml  docker-build.yml  frontend-ci.yml
agent/: Dockerfile  README.md  TESTING.md  config-test-hostname.yaml  config-test-ready.yaml  config-test.yaml  config.example.yaml  go.mod  go.sum  install.ps1  install.sh  test-agent.sh
agent/.crontopus/: agent-token
agent/docs/: git-authentication.md  windows-server-testing.md
agent/examples/: com.crontopus.agent.plist  crontopus-agent-task.xml  crontopus-agent.service
agent/scripts/: uninstall.sh
backend/: .coverage  .dockerignore  Dockerfile  alembic.ini  crontopus.db  pytest.ini  requirements.txt  run_tests.sh  start.sh  test.db
backend/crontopus_api/: __init__.py  config.py  main.py
backend/migrations/: env.py
backend/scripts/: migrate_namespaces.py
backend/tests/: conftest.py  test_auth.py  test_checkins.py  test_namespaces.py  (+1 more)
cli/: main.py  pyproject.toml
cli/commands/: agents.py  auth.py  runs.py
cli/core/: api_client.py  auth.py  config.py  formatter.py
docs/: api-authentication-guide.md  api-reference.md  deployment.md  development-plan.md  job-manifest-spec.md  namespace-best-practices.md  test-plan.md
frontend/: .env.production  Dockerfile  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts
infra/: README.md
scripts/: deploy.sh  docker-cleanup.sh  setup-db-permissions.sql
(+140 files in other folders)
