[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crontopus-cli"
version = "0.1.0"
description = "CLI for Crontopus job scheduling platform"
requires-python = ">=3.9"
authors = [
    {name = "Crontopus Team"}
]

dependencies = [
    "click>=8.1.0",
    "httpx>=0.24.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.0.270",
]

[project.scripts]
crontopus = "main:cli"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.setuptools]
packages = ["core", "commands"]

[tool.ruff]
line-length = 100
target-version = "py39"
